--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
       <artifactId>scala-reflect</artifactId>
       <version>${scala.version}</version>
     </dependency>
+    <dependency>
+    	<groupId>ch.qos.logback</groupId>
+    	<artifactId>logback-classic</artifactId>
+    	<version>1.0.1</version>
+    </dependency>
     
     <!-- Test -->
     <dependency>
